fix video and nav bar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1315,7 +1315,7 @@ p {
 }
 
 .card-body-c {
-  padding: .5rem .5rem 0 .5rem;
+  padding: .5rem 1rem 0 1rem;
   font-size: 1.2rem;
 }
 
@@ -1328,7 +1328,7 @@ p {
 }
 
 .card-box-ico span {
-  font-size: 4rem;
+  font-size: 2rem;
   color: #000000;
 }
 
